add_library (twpipe_utils
    logging.h
    logging.cc
    alphabet.h
    alphabet.cc
    alphabet_collection.h
    alphabet_collection.cc
    corpus.h
    corpus.cc
    optimizer_builder.h
    optimizer_builder.cc
    trainer.h
    trainer.cc
    model.h
    model.cc
    embedding.h
    embedding.cc
    cluster.h
    cluster.cc
    normalizer.h
    normalizer.cc
	math.h
	math.cc
    )
